# hidproxy

./: .gitignore  CMakeLists.txt  README.md  README_AUTO_CACHE.md  README_CHECKSUM_ALGORITHM.md  README_OFFLINE_USERNAME.md  README_UID_INPUT.md  README_VERIFICATION.md  README_VIRTUAL_CACHE.md  build.ps1  test_hijack.bat  test_output  update_card_checksum.py
injector/: CMakeLists.txt  README.md  run_launcher.ps1
injector/hook_dll/: dllmain.cpp  hid_hooks.cpp  hid_hooks.h  logging.cpp  logging.h  network_hooks.cpp  network_hooks.h
injector/launcher/: ICON_README.md  app.manifest  app.rc  main.cpp  resource.h
src-rust/: Cargo.toml
src-rust/src/: hid_ops.rs  main.rs
