[package]
name = "Vhid"
version = "0.1.0"
edition = "2021"

[dependencies]
hidapi = "2.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Security",
] }
